# pi-base.hs

./: .gitignore  Application.hs  DB.hs  Dockerfile  Explore.hs  Form.hs  Foundation.hs  Handler.hs  Import.hs  LICENSE.md  Logic.hs  Middleware.hs  Model.hs  Models.hs  Procfile  README.md  Settings.hs  Util.hs  Vagrantfile  app.json  build  devel.hs  docker-compose.yml  pi-base.cabal  serv.cabal  stack.yaml
DB/: Serialization.hs
Form/: Properties.hs  Space.hs  Spaces.hs  Theorems.hs  Trait.hs  Traits.hs
Handler/: Admin.hs  Base.hs  Cors.hs  Explore.hs  Helpers.hs  Home.hs  Partials.hs  Properties.hs  Resource.hs  Search.hs  Spaces.hs  Test.hs  Theorems.hs  Traits.hs  User.hs
Logic/: Types.hs
Model/: Proof.hs  Property.hs  Revision.hs  Space.hs  Theorem.hs  Trait.hs
Presenter/: Property.hs  Theorem.hs  Trait.hs
app/: Api.hs  Handlers.hs  Main.hs  devel.hs
app/Api/: Combinators.hs
config/: keter.yaml  models  postgresql.yml  routes  schema  settings.yml  settings.yml.example  test-settings.yml
deploy/: Procfile
public/js/: api.js
src/: Actions.hs  Api.hs  Base.hs  Config.hs  Formula.hs  Handlers.hs  Logic.hs  Models.hs  Pager.hs  README.md  Revisions.hs  Types.hs  Universe.hs  Util.hs
src/Api/: Base.hs  Combinators.hs  Helpers.hs  Properties.hs  Search.hs  Spaces.hs  Theorems.hs  Traits.hs  Types.hs
src/Handlers/: Helpers.hs  Resource.hs  Types.hs
src/Models/: Property.hs  Space.hs  Theorem.hs  Trait.hs  Types.hs
static/css/: main.css
static/js/: formula-typeahead.js  formula.js  jsonlite.js  latinize.js  local-cache.js  markdown.js  pi-base.js  property.js  rollbar.js
templates/: 404.hamlet  500.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  homepage.hamlet  homepage.julius
templates/admin/: check.hamlet  progress.hamlet  show.hamlet  theorem_progress.hamlet  trait_progress.hamlet  unproven.hamlet
templates/help/: site.hamlet
templates/properties/: _theorems.hamlet  delete.hamlet  edit.hamlet  index.hamlet  new.hamlet  revisions.hamlet  show.hamlet
templates/revisions/: _list.hamlet
templates/search/: help.hamlet  help.julius  malformed.hamlet  property_text_results.hamlet  results.hamlet  show.hamlet  show.julius  space_text_results.hamlet  text_results.hamlet
templates/spaces/: delete.hamlet  edit.hamlet  index.hamlet  new.hamlet  revisions.hamlet  show.hamlet
templates/theorems/: _converse_counterexamples.hamlet  check.hamlet  counterexamples.hamlet  delete.hamlet  edit.hamlet  index.hamlet  new.hamlet  new.julius  revisions.hamlet  show.hamlet
templates/traits/: _filtered.hamlet  _linked_list.hamlet  check.hamlet  delete.hamlet  edit.hamlet  index.hamlet  linked_name.hamlet  new.hamlet  revisions.hamlet  show.hamlet  show_deduced.hamlet
templates/users/: index.hamlet  show.hamlet
test/: Main.hs  Spec.hs
test/Spec/: Action.hs  App.hs  Helpers.hs  Logic.hs
tests/: HomeTest.hs
