name:              pi-base
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Middleware
                     Import
                     Util
                     DB.Serialization
                     DB
                     Logic.Types
                     Logic
                     Explore
                     Model
                     Model.Proof
                     Model.Property
                     Model.Revision
                     Model.Space
                     Model.Theorem
                     Model.Trait
                     Models
                     Presenter.Property
                     Presenter.Theorem
                     Presenter.Trait
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Form
                     Handler
                     Handler.Admin
                     Handler.Base
                     Handler.Helpers
                     Handler.Explore
                     Handler.Properties
                     Handler.Search
                     Handler.Spaces
                     Handler.Theorems
                     Handler.Traits
                     Handler.User

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         == 1.4.0
                 , yesod-core                    == 1.4.2
                 , yesod-auth                    == 1.4.0.1
                 , yesod-static                  == 1.4.0.2
                 , yesod-form                    == 1.4.0.2
                 , yesod-routes                  == 1.2.0.7
                 , bytestring                    
                 , text                          
                 , persistent                    == 2.1
                 , persistent-postgresql         == 2.1
                 , persistent-template           == 2.1
                 , template-haskell
                 , shakespeare                   
                 , hjsmin                        
                 , monad-control                 
                 , wai-extra                     
                 , yaml                          
                 , http-conduit                  
                 , directory                     
                 , warp                          
                 , data-default
                 , aeson                         
                 , conduit                       
                 , monad-logger                  
                 , fast-logger                   == 2.2.1
                 , wai-logger                    
                 , time                          
                 , unordered-containers          
                 , heroku                        
                 , containers                    
                 , vector                        
                 , esqueleto                     == 2.1.0
                 , wai                           == 3.0.2
                 , http-types                    
                 --, yesod-paginator               >= 0.9.1      && < 0.10
                 , rollbar                       
                 , network                       

executable         pi-base
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , pi-base
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , pi-base
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
