name:              pi-base
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Util
                     DB.Serialization
                     DB
                     Logic.Types
                     Logic
                     Explore
                     Model
                     Model.Proof
                     Model.Property
                     Model.Revision
                     Model.Space
                     Model.Theorem
                     Model.Trait
                     Models
                     Presenter.Property
                     Presenter.Theorem
                     Presenter.Trait
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Form.Properties
                     Form.Spaces
                     Form.Theorems
                     Form.Traits
                     Form
                     Handler
                     Handler.Admin
                     Handler.Helpers
                     Handler.Explore
                     Handler.Partials
                     Handler.Properties
                     Handler.Search
                     Handler.Spaces
                     Handler.Theorems
                     Handler.Traits
                     Handler.User

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.5        && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.2        && < 2.3
                 , persistent-postgresql         >= 2.2        && < 2.3
                 , persistent-template           >= 2.1        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.1        && < 3.2
                 , data-default
                 , aeson                         >= 0.8        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.4        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 --, unordered-containers          >= 0.2.4      && < 0.3
                 , esqueleto                       >= 2.4.1      && < 3.0
                 , yesod-paginator                 >= 0.10       && < 0.11
                 , rollbar                         >= 0.3        && < 0.4
                 , network                         >= 2.6        && < 2.7
                 , http-types                      >= 0.8.4      && < 0.9
                 , aeson-pretty                    >= 0.7.1      && < 0.8
                 , yesod-core                      >= 1.4        && < 1.5
                 , wai                             >= 3.0.3      && < 3.1
                 --, process                       >= 1.2.0      && < 1.3

executable         pi-base
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , pi-base
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall -fhpc

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , pi-base
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod

    other-modules: Handler.CommonSpec
                 , Handler.HomeSpec
                 , TestImport
