name:                pi-base
version:             0.2.0.0
synopsis:            Database of topological information
description:         Please see README.md
homepage:            http://github.com/jamesdabbs/pi-base-2
license:             BSD3
license-file:        LICENSE
author:              James Dabbs
maintainer:          jamesdabbs@gmail.com
copyright:           2010 James Dabbs
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Actions
                     , Api
                     , Api.Combinators
                     , Base
                     , Config
                     , Formula
                     , Handlers
                     , Handlers.Helpers
                     , Handlers.Types
                     , Logic
                     , Models
                     , Types
                     , Universe
                     , Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , http-types
                     , lens
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , servant-server
                     , stm
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable pi-base
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pi-base
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , servant
                     , servant-jquery
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite pi-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec.App
                     , Spec.Logic
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , hspec-core
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , pi-base
                     , resource-pool
                     , stm
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamesdabbs/pi-base-2
