name:                serv
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/serv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Actions
                     , Config
                     , Models
                     , Types
                     , Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable serv
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Api
                     , Handlers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , serv
                     , servant
                     , servant-jquery
                     , servant-server
                     , aeson
                     , bytestring
                     , either
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , stm
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite serv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/serv
